@@ -915,6 +915,9 @@ INFIX_FILTER_NAME=Infix Files
 # Flash filter
 FLASH_FILTER_NAME=Flash XML export
 
+# TXML filter
+TXML_FILTER_NAME=Wordfast TXML Files
+
 # org.omegat.filters3.xml.Handler
 XML_FATAL_ERROR=Error in file {0}, line {1}
 
